acvm-repo/msgpack_tagged/tests/compile_fail/enum_duplicate_variant_tag.stderr
error: variant tag 0 is used more than once
  --> tests/compile_fail/enum_duplicate_variant_tag.rs:10:5
   |
10 | /     #[tag(0)]
11 | |     Second,
   | |__________^
